fixed pink colour

--- a/valentine/style.css
+++ b/valentine/style.css
@@ -13,7 +13,7 @@ body {
   overflow-y: auto;
   overflow-x: hidden;
   font-family: 'Poppins', sans-serif;
-  background: #fff0f5; /* SAME soft pink */
+  background: #f78fb0;/* SAME soft pink */
 }
 
 
