--- a/valentine/style.css
+++ b/valentine/style.css
@@ -18,8 +18,8 @@ body {
   background: linear-gradient(
     to bottom,
     #f9e9ec 0%,
-    #f8d1da 50%,
-    #fbd1dc 100%
+    #fab8c7 50%,
+    #fac0d0 100%
   );
 }
 
